@@ -24,6 +24,7 @@ import javax.xml.bind.annotation.XmlRootElement;
 
 import org.apache.hadoop.util.VersionInfo;
 import org.apache.hadoop.yarn.server.nodemanager.Context;
+import org.apache.hadoop.yarn.server.nodemanager.NodeManager;
 import org.apache.hadoop.yarn.server.nodemanager.ResourceView;
 import org.apache.hadoop.yarn.util.YarnVersionInfo;
 
@@ -49,6 +50,7 @@ public class NodeInfo {
   protected String hadoopVersionBuiltOn;
   protected String id;
   protected String nodeHostName;
+  protected long nmStartupTime;
 
   public NodeInfo() {
   } // JAXB needs this
@@ -77,6 +79,7 @@ public class NodeInfo {
     this.hadoopVersion = VersionInfo.getVersion();
     this.hadoopBuildVersion = VersionInfo.getBuildVersion();
     this.hadoopVersionBuiltOn = VersionInfo.getDate();
+    this.nmStartupTime = NodeManager.getNMStartupTime();
   }
 
   public String getNodeId() {
@@ -143,4 +146,7 @@ public class NodeInfo {
     return this.pmemCheckEnabled;
   }
 
+  public long getNMStartupTime() {
+    return nmStartupTime;
+  }
 }
